# akyla-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  manifest.json  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  release.yml
src/akyla_mcp/: __init__.py  akyla_db.py  auth.py  client.py  config.py  server.py
tasks/: todo.md
tests/: test_server.py
