[project]
name = "akyla-mcp"
version = "0.1.2"
description = "MCP server for the Akyla Financial Data API — cited SEC fundamentals, quotes, statements, comps & a US-equity screener, straight from primary filings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akyla", email = "hello@akyla.ai" }]
keywords = ["mcp", "model-context-protocol", "finance", "sec", "xbrl", "stocks", "financial-data", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.0,<4",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://akyla.ai/products/financial-data-api"
Documentation = "https://app.akyla.ai/docs"
Source = "https://github.com/AkilaAnalytics/akyla-mcp"
Issues = "https://github.com/AkilaAnalytics/akyla-mcp/issues"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
akyla-mcp = "akyla_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akyla_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
